# comfyui-apex-artist

./: .comfyui-manager.json  .gitignore  .gitignore.bak  APEX_LORA_MERGE.md  CODE_REVIEW_FINDINGS.md  MODELS_CACHE.md  PUBLISH.md  README.md  __init__.py  apex_blur.py  apex_color_reference.py  apex_depth_to_normal.py  apex_json_node.py  apex_last_frame.py  apex_latent_noise.py  apex_layer_blend.py  apex_load_image.py  apex_load_model.py  apex_lora_api.py  apex_lora_loader.py  apex_lora_merge.py  apex_lora_stack.py  apex_palette.py  apex_prompt.py  apex_prompt_api.py  apex_prompt_lens_api.py  apex_prompt_preset_api.py  apex_quantizer.py  apex_random_prompt.py  apex_rgb_curve.py  apex_sharpen.py  apex_smart_resize.py  apex_stable_normal.py  apex_upscale.py  apex_utils.py  comfyui.yaml  custom_nodes.json  diag_import.py  download_model.py  license.md  (+5 more)
memory-bank/: activeContext.md  apex_load_model_fixes.md  domWidgetPatterns.md  features.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: check_model_options.py
web/: apex_load_model.js  apex_lora_loader.js  apex_lora_merge.js  apex_lora_stack.js  apex_prompt.js  apex_prompt_lens.js  apex_prompt_preset.js  apex_rgb_curve.js  rgb_curve_core.js
